[dyad] Implementing NFT system for emerald certification - wrote 9 file(s), added @pinata/sdk, multer, ethers, hardhat, @nomicfoundation/hardhat-toolbox package(s)

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@payloadcms/db-postgres": "3.49.1",
     "@payloadcms/email-nodemailer": "3.49.1",
     "@payloadcms/next": "3.49.1",
     "@payloadcms/richtext-lexical": "3.49.1",
     "@payloadcms/ui": "3.49.1",
+    "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -55,9 +57,12 @@
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.16.0",
     "graphql": "^16.8.1",
+    "hardhat": "^3.0.17",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.515.0",
+    "multer": "^2.0.2",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
