--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rainbow-me/rainbowkit": "^2.2.10",
+    "@wagmi/connectors": "^7.0.2",
+    "@wagmi/core": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -78,6 +81,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
+    "viem": "^2.41.2",
+    "wagmi": "^3.1.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
